# ferricstore

./: .credo.exs  .gitignore  Dockerfile  IDEAS.md  README.md  RELEASING.md  REVIEW_ISSUES.md  TASKS.md  docker-compose.yml  elixir_performance_guide.md  ferricstore-spec.docx  ferricstore-storage-spec.docx  ferricstore-test-plan.docx  mix.exs  questions.md
.github/workflows/: bench.yml  docker-publish.yml  hex-publish.yml  release.yml  test.yml
apps/ferricstore/: checksum-Elixir.Ferricstore.Bitcask.NIF.exs  mix.exs
apps/ferricstore/native/ferricstore_bitcask/: Cargo.toml
apps/ferricstore/native/ferricstore_bitcask/src/: async_io.rs  bloom.rs  cms.rs  compaction.rs  cuckoo.rs  fs_nif.rs  hint.rs  hnsw.rs  keydir.rs  lib.rs  log.rs  store.rs  tdigest.rs  topk.rs  tracking_alloc.rs
apps/ferricstore/native/ferricstore_bitcask/src/io_backend/: async_uring.rs  mod.rs  uring.rs
apps/ferricstore/native/ferricstore_wal_nif/: Cargo.toml
apps/ferricstore/native/ferricstore_wal_nif/src/: aligned_buffer.rs  background_thread.rs  lib.rs  tests.rs  wal_handle.rs
apps/ferricstore_ecto/: README.md  mix.exs
apps/ferricstore_nebulex/: .gitignore  README.md  mix.exs
apps/ferricstore_server/: mix.exs
apps/ferricstore_server/native/resp_parser_nif/: Cargo.toml
apps/ferricstore_server/native/resp_parser_nif/src/: lib.rs
apps/ferricstore_session/: mix.exs
bench/: cluster_throughput.exs  commands_bench.exs  durability_check.exs  erpc_throughput.exs  haproxy.cfg  nodelay_bench.sh  resp_bench.exs  router_write_bench.exs  run.sh  shard_bench.sh  store_bench.exs  tcp_bench.exs  tcp_throughput.sh  write_backend_bench.exs
bench/results/: erpc_vs_tcp_results.md
config/: bench.exs  config.exs  dev.exs  prod.exs  runtime.exs  test.exs
deploy/azure/: README.md  cloud-init-client.yaml  cloud-init.yaml  main.tf  outputs.tf  variables.tf
docs/: acl-design.md  async-compound-list-prob-design.md  async-rmw-design.md  async-wal-benchmark.md  async-write-redesign.md  audit-results.md  background-bitcask-benchmark.md  benchmark-issues.md  benchmark-plan.md  bitcask-background-fsync.md  bugs-round2.md  bugs-to-fix.md  cache-optimization-design.md  clean-ra-benchmark.md  cluster-design.md  combined-optimization-benchmark.md  cross-shard-transactions-design.md  direct-ra-benchmark.md  dragonfly-rmw-analysis.md  ecto-l2-cache-design.md  elixir-guide-audit.md  elixir-memory-audit.md  hlc-clock-migration.md  ideas.md  instance-based-architecture.md  jepsen-failures.md  module-split-design.md  nif-integration-audit.md  no-raft-benchmark.md  performance-audit.md  precompiled-nif-design.md  pure-ra-async-benchmark.md  ra-empty-wal-bug-repro.exs  ra-empty-wal-bug-repro.md  ra-fork-results.md  ra-fork-wal-nif-design.md  ra-fork-wal-nif-review.md  ra-fsync-analysis.md  ra-optimization-plan.md  raft-error-propagation.md  (+20 more)
guides/: architecture.md  best-practices.md  commands.md  comparison.md  configuration.md  deployment.md  embedded-mode.md  extensions.md  getting-started.md  security.md  standalone-mode.md
ideas/: IDEAS.md  acid-transactions.md  ts-columnar-spec.md
lib/: ferricstore.ex
lib/ferricstore/: acl.ex  application.ex  audit_log.ex  config.ex  data_dir.ex  health.ex  hlc.ex  hyperloglog.ex  keyspace_notifications.ex  (+8 more)
native/ferricstore_bitcask/: Cargo.toml
native/ferricstore_bitcask/src/: compaction.rs  hint.rs  hnsw.rs  keydir.rs  lib.rs  log.rs  store.rs
native/ferricstore_bitcask/src/io_backend/: async_uring.rs  mod.rs  uring.rs
rel/: vm.args.eex
test/: ferricstore_test.exs  test_helper.exs
(+830 files in other folders)
