[package]
name = "ferricstore_bitcask"
version = "0.1.0"
edition = "2021"

[lib]
name = "ferricstore_bitcask"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
libc = "0.2"

# io_uring is Linux-only. On macOS/Windows these deps are completely absent —
# Cargo does not download, compile, or link them. Falls back to SyncBackend.
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
