[package]
name = "ferricstore_wal_nif"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "ferricstore_wal_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37", default-features = false, features = ["derive"] }
crossbeam-channel = "0.5"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[features]
default = ["nif_version_2_16"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
iouring = ["io-uring"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
